tests/ui/errors/snapshots/infer_immutable_spread_to_mut_variadic_param.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Immutable argument passed to `mut` parameter
    ╭─[test.lis:10:9]
  9 │   let data = [xs, ys]
 10 │   touch(data...)
    ·         ──┬─
    ·           ╰── expected mutable, found immutable
 11 │ }
    ╰────
  help: `touch()` may mutate `data`, so declare it mutable using `let mut data = ...` · code: [infer.immutable_arg_to_mut_param]
