tests/ui/errors/snapshots/infer_immutable_spread_to_mut_variadic_param_scalar_element.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Immutable argument passed to `mut` parameter
   ╭─[test.lis:8:13]
 7 │   let ys = [1, 2]
 8 │   overwrite(ys...)
   ·             ─┬
   ·              ╰── expected mutable, found immutable
 9 │ }
   ╰────
  help: `overwrite()` may mutate `ys`, so declare it mutable using `let mut ys = ...` · code: [infer.immutable_arg_to_mut_param]
