tests/ui/errors/snapshots/infer_impl_on_builtin_array.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Cannot implement methods on foreign type
   ╭─[main.lis:2:1]
 1 │     
 2 │ ╭─▶ impl<T> Array<T, 3> {
 3 │ │     fn first(self) -> int {
 4 │ │       0
 5 │ │     }
 6 │ ├─▶ }
   · ╰──── `Array` is defined in package `prelude`
 7 │     
   ╰────
  help: Methods can only be defined on types in the same package. Use a standalone function instead: `fn my_method(w: Array) { ... }` · code: [infer.impl_on_foreign_type]
