tests/ui/errors/snapshots/infer_impl_on_type_alias.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Cannot implement methods on type alias
   ╭─[test.lis:4:6]
 3 │ 
 4 │ impl UserId {
   ·      ───┬──
   ·         ╰── not a distinct type
 5 │   fn bump(self) -> int {
   ╰────
  help: A type alias cannot carry its own methods. Either add methods to the underlying type directly or define a tuple struct instead · code: [infer.impl_on_type_alias]
