tests/ui/errors/snapshots/infer_inner_where_result_expected.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
   ╭─[test.lis:3:10]
 2 │ fn test() -> Result<int, string> {
 3 │   return 42;
   ·          ─┬
   ·           ╰── expected `Result<int, string>`, found `int`
 4 │ }
   ╰────
  help: Wrap the value: `Ok(...)` · code: [infer.type_mismatch]
