tests/ui/errors/snapshots/infer_instance_method_called_on_type_alias.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Cannot use a type as a value
   ╭─[test.lis:5:11]
 4 │ fn main() {
 5 │   let n = Rows.length()
   ·           ──┬─
   ·             ╰── type names are not runtime values
 6 │   let _ = n
   ╰────
  help: `Rows` refers to a type, not a value · code: [infer.type_used_as_value]
